# prosper-challenge

./: .env.example  CLAUDE.md  DESIGN.md  Dockerfile  README.md  SOLUTION.md  audit.py  bot.py  docker-compose.yml  env.example  pyproject.toml
agent/: Dockerfile  audit.py  bot.py  ehr.py  nodes.py  transport.py  ws_server.py
api/: Dockerfile  main.py  pyproject.toml
api/core/: auth.py  database.py  events.py  scenarios.py  seed.py  simulation.py
api/models/: __init__.py  appointment.py  appointment_slot.py  audit.py  base.py  patient.py  slot.py
api/routers/: appointments.py  audit.py  dashboard.py  events.py  patients.py  simulation.py  slots.py
api/schemas/: __init__.py  appointment.py  audit.py  dashboard.py  patient.py  simulation.py  slot.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  types.ts  utils.ts
frontend/src/components/: AuditLog.tsx  Header.tsx  PatientsTable.tsx  SimulationResult.tsx  SimulationTab.tsx  StatsBar.tsx  Tabs.tsx  WeekCalendar.tsx
