[project]
name = "prosper-ehr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
    "email-validator>=2.0",
    "openai>=1.0",
    "websockets>=12.0",
    "loguru>=0.7",
]
